# file_share_bot

./: .env.example  .gitignore  Cargo.toml
src/: database.rs  main.rs  server.rs
