[package]
name = "file_share_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.9"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
pretty_env_logger = "0.4"
log = "0.4"
once_cell = "1.7"
dotenv = "0.15"
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
hyper-staticfile = "0.9"
rusqlite = "0.27"
chrono = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.20"
